--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
+  cache=TRUE,
   out.width = "100%"
 )
 ```
@@ -22,3 +23,63 @@ knitr::opts_chunk$set(
 The goal of ezwarp is to ...
 
 make warping easy - more to come.
+
+
+```{r simple-world, figures-side, fig.show="hold", out.width="50%"}
+library(ezwarp)
+library(terra)
+template <- ezgrid(c(-180, 180, -90, 90),
+                   dimension = c(720, 360),
+                   projection='EPSG:4326')
+
+src <- "/vsicurl/https://public.services.aad.gov.au/datasets/science/GEBCO_2019_GEOTIFF/GEBCO_2019.tif"
+
+world.el.terra <- ezwarp(x=src, y=template)
+world.el.stars <- ezwarp(x=src, y=template, out_class = 'stars')
+sciplot(world.el.terra, .pal='bukavu', centre=TRUE)
+sciplot(world.el.stars, .pal='oleron', centre=TRUE)
+
+```
+
+cutline...
+```{r mask-world}
+
+wrld <-"/vsizip//vsicurl/https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.zip"
+
+world.el.mask <- ezwarp(x=src, y=src, res=0.5, cutline = wrld)
+
+sciplot(world.el.mask, .pal='lapaz', range=c(0, max(world.el.mask[], na.rm=TRUE)))
+```
+
+
+cutline with sql query
+```{r mask-che, figures-side, fig.show="hold", out.width="50%"}
+library(sf)
+
+esri_sat <- "<GDAL_WMS><Service name=\"TMS\"><ServerUrl>http://services.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/${z}/${y}/${x}</ServerUrl></Service><DataWindow><UpperLeftX>-20037508.34</UpperLeftX><UpperLeftY>20037508.34</UpperLeftY><LowerRightX>20037508.34</LowerRightX><LowerRightY>-20037508.34</LowerRightY><TileLevel>17</TileLevel><TileCountX>1</TileCountX><TileCountY>1</TileCountY><YOrigin>top</YOrigin></DataWindow><Projection>EPSG:900913</Projection><BlockSizeX>256</BlockSizeX><BlockSizeY>256</BlockSizeY><BandsCount>3</BandsCount><MaxConnections>10</MaxConnections><Cache /></GDAL_WMS>"
+
+f <- system.file("gpkg", "nc.gpkg", package = "sf")
+
+nc.mask <- ezwarp(x=esri_sat, y=esri_sat, res=100, cutline = f,
+                   crop_to_cutline = TRUE, nodata = -99)
+
+stokes.mask <- ezwarp(x=esri_sat, y=esri_sat, res=25, cutline = f,
+                   options=c("-csql", "SELECT * FROM 'nc.gpkg' WHERE NAME = 'Stokes'"),
+                   crop_to_cutline = TRUE, nodata = -99)
+
+f_sf <- read_sf(f) %>% 
+  st_transform(vapour::vapour_raster_info(esri_sat)$projection)
+
+terra::plotRGB(nc.mask)
+plot(st_geometry(f_sf), add=TRUE, border='grey90')
+terra::plotRGB(stokes.mask)
+plot(st_geometry(f_sf), add=TRUE, border='grey10')
+
+```
+
+mix sources...
+
+
+
+
+
