--- a/README.Rmd
+++ b/README.Rmd
@@ -77,7 +77,34 @@ plot(st_geometry(f_sf), add=TRUE, border='grey10')
 
 ```
 
-mix sources...
+This example is just to illustrate that ezwarp can handle differing inputs as sources - url/filepath/SpatRaster/stars and can use all of these along with sf/sfc/SpatVector as a template too. 
+
+```{r mixed-source, figures-side, fig.show="hold", out.width="33%"}
+
+nc_sub1 <- f_sf[1:10,]
+nc_sub2 <- vect(f_sf[90:100,])
+
+nc_sub1.terra <- ezwarp(x=src, y=nc_sub1, res=100, cutline= nc_sub1,
+                        crop_to_cutline = TRUE) 
+
+nc_sub2.stars <- ezwarp(x=src, y=nc_sub2, res=200, cutline= nc_sub2,
+                        crop_to_cutline = TRUE, out_class = 'stars')
+
+multi.ras <- ezwarp(x=list(nc_sub1.terra, nc_sub2.stars), 
+                    y=f_sf, res=200, out_class = 'stars')
+
+
+sciplot(nc_sub1.terra, .pal = 'bamako')
+plot(st_geometry(f_sf), add=TRUE, border='grey30')
+
+sciplot(nc_sub2.stars, .pal = 'vanimo', reset=FALSE)
+plot(st_geometry(f_sf), add=TRUE, border='grey30', reset=TRUE)
+
+sciplot(multi.ras, .pal = 'romaO', reset=FALSE)
+plot(st_geometry(f_sf), add=TRUE, border='grey30', reset=TRUE)
+
+
+```
 
 
 
