--- a/README.Rmd
+++ b/README.Rmd
@@ -20,6 +20,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+[![Codecov test coverage](https://codecov.io/gh/Permian-Global-Research/ezwarp/branch/main/graph/badge.svg)](https://app.codecov.io/gh/Permian-Global-Research/ezwarp?branch=main)
 <!-- badges: end -->
 
 The goal of ezwarp is to ...
