--- a/README.Rmd
+++ b/README.Rmd
@@ -23,9 +23,77 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/Permian-Global-Research/ezwarp/branch/main/graph/badge.svg)](https://app.codecov.io/gh/Permian-Global-Research/ezwarp?branch=main)
 <!-- badges: end -->
 
-The goal of ezwarp is to ...
+### Overview
+The goal of ezwarp is to simplify the use of [gdalwarp](https://gdal.org/programs/gdalwarp.html) 
+in R. Gdalwarp is a very powerful and fast Image reprojection and warping utility. 
+It can be used to reproject (transform the Coordinate Reference System (CRS)), 
+crop, mask and resample. Unlike many tools in R, this can all be done in a single
+command, using the warp tool, saving time and code.
 
-make warping easy - more to come.
+At present, there are
+many ways to access the functionality of gdalwarp in R. These include:
+
+- [vapour::warp_raster](https://hypertidy.github.io/vapour/reference/vapour_warp_raster.html)
+- [sf::gdal_utils](https://r-spatial.github.io/sf/reference/gdal_utils.html)
+- [stars::st_warp](https://r-spatial.github.io/stars/reference/st_warp.html)
+- [{gdalio}](https://github.com/hypertidy/gdalio)
+- system("gdalwarp ...")
+- [terra::project](https://rspatial.github.io/terra/reference/project.html)
+- [{whatarelief}](https://mdsumner.github.io/whatarelief/)
+
+Some of these packages/functions (perhaps sensibly) restrict certain functionality
+of gdalwarp to make specific tasks much simpler (e.g. 'terra::project' allows 
+only a single input source). 
+
+There are two warp "engines" provided in *ezwarp*: vapour (the default) and sf.
+The advantage of vapour is that it supports direct-to-memory read of raster data
+so no need to store intermediate tif files. However, when things get large, it can
+be problematic to load the entire dataset into memory, in which case sf may be more
+suitable.
+
+*ezwarp* provides simple access to the majority of gdalwarp's functionality in
+a simplified API that allows users to focus on the task at hand rather than the
+disperate classes (and their conversions) that exist in the r spatial ecosystem.
+
+To warp a raster dataset, gdalwarp requires an extent, a dimension and a projection. 
+This can be defined in ezwarp manually using an `ezgrid` class object which is a 
+very simple s3 object comprising those three key variables (created with `ezgrid()`).
+However, estimating raster dimensions can be unintuitive and is a step removed 
+from the required spatial context on the ground. So, ezwarp provides a resolution 
+argument (`res`) which can be used with an ezgrid object, with a missing dimension 
+or any of the following R spatial classes: SpatRaster, SpatVector, sf, sfc, stars. 
+In addition, ezwarp also supports file paths and URLs for valid spatial files.
+
+terra sf and stars are the best supported and most popular spatial packages in 
+the R ecosystem. *ezwarp* aims to support these types. Further types can be added 
+as required (please submit an issue to request this).
+
+### Installation
+
+```{r, install, eval=FALSE}
+#install.packages("remotes")
+## need the dev vapour branch
+
+options(repos = c(
+    hypertidy = 'https://hypertidy.r-universe.dev',
+    CRAN = 'https://cloud.r-project.org'))
+    
+install.packages("vapour")
+
+remotes::install_github("Permian-Global-Research/ezwarp")
+```
+
+
+### Examples
+
+A very simple example, defining the grid manually with ezgrid. Here we use the
+excellent global GEBCO elevation dataset from ... Now clearly downloading at full
+resolution would take forever. So, using gdalwarp we can resample to a more 
+modest resolution - in this case 0.5 degrees - by manually setting the dimension.
+
+Note that the output can be either a SpatRaster or stars object. Also, see that 
+a general plotting function `sciplot` is provided to make use of the great scientific
+colour palettes provided in the [{scico}](https://github.com/thomasp85/scico) package.
 
 
 ```{r simple-world, figures-side, fig.show="hold", out.width="50%"}
@@ -44,18 +112,31 @@ sciplot(world.el.stars, pal='oleron', n =256, centre=TRUE)
 
 ```
 
-cutline...
+The `cutline` argument can be used to mask regions with a input spatial vector. 
+Here we demonstrate this by using an online [geojson of country outlines](https://www.geoboundaries.org/downloadCGAZ.html) 
+directly. Note also that we reuse the source as the target (y) but set the 
+`res` argument to 0.5 to make sure we resample the grid. In this example, the
+sf warp engine is used rather than vapour.
+
 ```{r mask-world}
 
 wrld <-"/vsizip//vsicurl/https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.zip"
 
-world.el.mask <- ezwarp(x=src, y=src, res=0.5, cutline = wrld)
+world.el.mask <- ezwarp(x=src, y=src, res=0.5, cutline = wrld, engine = 'sf')
 
 sciplot(world.el.mask, pal='lapaz', range=c(0, max(world.el.mask[], na.rm=TRUE)))
 ```
 
 
-cutline with sql query
+We can also pass additional arguments to gdalwarp using the options command -
+See here the [gdalwarp docs](https://gdal.org/programs/gdalwarp.html). Here we
+pass an sql query for the cutline feature specifying that we only want to use
+Stokes County (from the nc dataset in sf). Also the crop_to_cutline argument is 
+used here to limit the extent to the specified cropline feature. This example 
+also demonstrates how ezwarp handles multiple bands, in this case with the esri 
+satellite WMS layer. By default, all bands are read - this can be changed with 
+the `bands` argument.
+
 ```{r mask-che, figures-side, fig.show="hold", out.width="50%"}
 library(sf)
 
@@ -80,7 +161,9 @@ plot(st_geometry(f_sf), add=TRUE, border='grey10')
 
 ```
 
-This example is just to illustrate that ezwarp can handle differing inputs as sources - url/filepath/SpatRaster/stars and can use all of these along with sf/sfc/SpatVector as a template too. 
+This example is just to illustrate that *ezwarp* can handle differing inputs as 
+sources - url/filepath/SpatRaster/stars and can use all of these along 
+with sf/sfc/SpatVector/ezgrid as a target (y) too. 
 
 ```{r mixed-source, figures-side, fig.show="hold", out.width="33%", warning=FALSE, message=FALSE}
 
