--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,12 @@
 ---
-output: github_document
+title: raytrix
+output: 
+  github_document:
+    fig_width: 7.5
+    fig_height: 6
+  html_preview: false
+editor_options: 
+  chunk_output_type: console
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -196,7 +203,8 @@ plot(st_geometry(f_sf), add=TRUE, border='grey30', reset=TRUE)
 A matrix output class is also supported. This will return a matrix if the source 
 has only one band (or only one is requested). A multidimensional array is 
 returned when more than one band is present. The returned object includes 
-*extent*, *dimension* and *projections* attributes. These objects happen also to 
+*extent*, *dimension* and *projections* attributes. This can be useful if you plan
+to directly manipulate your data in R. These objects happen also to 
 be compatible with rayshader...
 
 ```{r}
@@ -205,7 +213,6 @@ library(rayshader)
 # get terrain as matrix
 nc_dtm.mat <- ezwarp(src, f_sf, cutline = f_sf, res=500, out_class = 'matrix', 
                      engine = 'sf', nodata=-999)
-# nc_dtm.mat[is.nan(nc_dtm.mat)]<-NA
 
 # get esri sat RGB bands as stacked array
 nc.mask.mat <- ezwarp(x=esri_sat, y=f_sf, res=250, cutline = f_sf,
@@ -223,10 +230,10 @@ nc_dtm.mat %>%
     alphalayer = 0.7, rescale_original = FALSE) %>%
   add_overlay(generate_polygon_overlay(
       f_sf, extent = raster::extent(attributes(nc_dtm.mat)$extent),
-      heightmap = nc_dtm.mat, palette = NA)
-  ) %>%
+      heightmap = nc_dtm.mat, palette = NA),
+      alphalayer = 0.7) %>%
   plot_3d(nc_dtm.mat, zscale=70, theta = 0, phi=90, zoom=0.5, windowsize = (c(1100,600))) 
-  render_snapshot(clear = TRUE)
+  render_snapshot(clear = FALSE)
 
 ```
 
