--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
 ---
-title: ezwarp
+title: "ezwarp <img src='https://avatars.githubusercontent.com/u/106586419?s=400&u=69fb140fd7d3f204f361e85dba7398ac33d88a03&v=4' align='right' height='75%' width='75%'/>"
 output: 
   github_document:
     fig_width: 7.5
@@ -25,7 +25,6 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
-[![Codecov test coverage](https://codecov.io/gh/Permian-Global-Research/ezwarp/branch/main/graph/badge.svg)](https://app.codecov.io/gh/Permian-Global-Research/ezwarp?branch=main)
 <!-- badges: end -->
 
 ### Overview
