updated docs reduced deps. sf now suggests

--- a/README.Rmd
+++ b/README.Rmd
@@ -117,12 +117,11 @@ directly. Note also that we reuse the source as the target (y) but set the
 sf warp engine is used rather than vapour.
 
 ```{r mask-world}
-
-wrld <-"/vsizip//vsicurl/https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.zip"
+wrld <-"https://github.com/wmgeolab/geoBoundaries/raw/v5.0.0/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.geojson"
 
 world.el.mask <- ezwarp(x=src, y=src, res=0.5, cutline = wrld, engine = 'sf')
 
-sciplot(world.el.mask, pal='lapaz', range=c(0, max(world.el.mask[], na.rm=TRUE)))
+sciplot(world.el.mask, pal='lapaz' ) # range=c(0, max(world.el.mask[], na.rm=TRUE))
 ```
 
 
@@ -146,10 +145,10 @@ nc.mask <- ezwarp(x=esri_sat, y=esri_sat, res=100, cutline = f,
                    crop_to_cutline = TRUE, nodata = -99)
 
 stokes.mask <- ezwarp(x=esri_sat, y=esri_sat, res=25, cutline = f,
-                   options=c("-csql", "SELECT * FROM 'nc.gpkg' WHERE NAME = 'Stokes'"),
+                   options=c("-csql", "SELECT * FROM 'nc.gpkg' WHERE NAME = 'Jackson'"),
                    crop_to_cutline = TRUE, nodata = -99)
 
-f_sf <- read_sf(f) %>% 
+f_sf <- read_sf(f) |>  
   st_transform(vapour::vapour_raster_info(esri_sat)$projection)
 
 terra::plotRGB(nc.mask)
@@ -195,35 +194,17 @@ has only one band (or only one is requested). A multidimensional array is
 returned when more than one band is present. The returned object includes 
 *extent*, *dimension* and *projections* attributes. This can be useful if you plan
 to directly manipulate your data in R. These objects happen also to 
-be compatible with rayshader...
+be compatible with {rayshader...}
 
-```{r}
+```{r rayshade-example}
 library(rayshader)
 
 # get terrain as matrix
-nc_dtm.mat <- ezwarp(src, f_sf, cutline = f_sf, res=500, out_class = 'matrix', 
-                     engine = 'sf', nodata=-999)
-
-# get esri sat RGB bands as stacked array
-nc.mask.mat <- ezwarp(x=esri_sat, y=f_sf, res=250, cutline = f_sf,
-                   crop_to_cutline = TRUE, nodata = -99,
-                   out_class = 'matrix')
-
-# make the map
-pal.cols <- c(scico::scico(5, palette = "buda"))
-
-nc_dtm.mat %>%
-  sphere_shade(
-    texture = create_texture(pal.cols[1], pal.cols[2], pal.cols[3],
-                             pal.cols[4], pal.cols[5]),zscale = 5) %>%
-   add_overlay(scales::rescale(nc.mask.mat, to = c(0, 1)),
-    alphalayer = 0.8, rescale_original = TRUE) %>%
-  add_overlay(generate_polygon_overlay(
-      f_sf, extent = raster::extent(attributes(nc_dtm.mat)$extent),
-      heightmap = nc_dtm.mat, palette = NA),
-      alphalayer = 0.7) %>%
-  plot_3d(nc_dtm.mat, zscale=70, theta = 0, phi=90, zoom=0.5, windowsize = (c(2200,1200))) 
-  render_snapshot(clear = FALSE)
+nc_dtm.mat <- ezwarp(src, f_sf, cutline = f, crop_to_cutline = TRUE,
+                     res=200, out_class = 'matrix', nodata=-999, 
+                     resample = "lanczos") |> 
+  ray_shade(zscale=70)|> 
+  plot_map()
 
 ```
 
