some bug fixes and checks for character objects. lots of pkgdown and docs faff

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,12 +1,5 @@
 ---
-title: "ezwarp <img src='https://avatars.githubusercontent.com/u/106586419?s=400&u=69fb140fd7d3f204f361e85dba7398ac33d88a03&v=4' align='right' height='12%' width='12%'/>  <br> "
-output: 
-  github_document:
-    fig_width: 7.5
-    fig_height: 6
-  html_preview: false
-editor_options: 
-  chunk_output_type: console
+output: github_document
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -22,6 +15,11 @@ knitr::opts_chunk$set(
   message = FALSE
 )
 ```
+<br>
+
+<img src='https://avatars.githubusercontent.com/u/106586419?s=400&u=69fb140fd7d3f204f361e85dba7398ac33d88a03&v=4' align='right' height='10%' width='10%'/></a>
+
+# ezwarp 
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
@@ -111,17 +109,19 @@ sciplot(world.el.stars, pal='oleron', n =256, centre=TRUE)
 ```
 
 The `cutline` argument can be used to mask regions with a input spatial vector. 
-Here we demonstrate this by using an online [geojson of country outlines](https://www.geoboundaries.org/downloadCGAZ.html) 
+Here we demonstrate this by using an online [geojson of Madagascar](https://www.geoboundaries.org/downloadCGAZ.html) 
 directly. Note also that we reuse the source as the target (y) but set the 
-`res` argument to 0.5 to make sure we resample the grid. In this example, the
-sf warp engine is used rather than vapour.
+`res` argument to 0.5 to make sure we resample the grid. We also specify 
+`crop_to_cutline = TRUE` otherwise the extent will default to that defined by `y`. 
+In this example, the 'sf' warp engine is used rather than 'vapour'.
 
 ```{r mask-world}
-wrld <-"https://github.com/wmgeolab/geoBoundaries/raw/v5.0.0/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.geojson"
+madagascar <-"https://github.com/wmgeolab/geoBoundariesArchive_4_0_0/raw/299e00623ece6c03bcb9a751eda6094b1eac85a6/releaseData/gbOpen/MDG/ADM0/geoBoundaries-MDG-ADM0.geojson"
 
-world.el.mask <- ezwarp(x=src, y=src, res=0.5, cutline = wrld, engine = 'sf')
+world.el.mask <- ezwarp(x=src, y=src, res=0.1, cutline = madagascar, 
+                        crop_to_cutline = TRUE, engine = 'sf')
 
-sciplot(world.el.mask, pal='lapaz' ) # range=c(0, max(world.el.mask[], na.rm=TRUE))
+sciplot(world.el.mask, pal='lapaz' ) 
 ```
 
 
@@ -142,9 +142,9 @@ esri_sat <- "<GDAL_WMS><Service name=\"TMS\"><ServerUrl>http://services.arcgison
 f <- system.file("gpkg", "nc.gpkg", package = "sf")
 
 nc.mask <- ezwarp(x=esri_sat, y=esri_sat, res=100, cutline = f,
-                   crop_to_cutline = TRUE, nodata = -99)
+                   crop_to_cutline = TRUE, nodata = -99, engine="sf")
 
-stokes.mask <- ezwarp(x=esri_sat, y=esri_sat, res=25, cutline = f,
+jackson.mask <- ezwarp(x=esri_sat, y=esri_sat, res=25, cutline = f,
                    options=c("-csql", "SELECT * FROM 'nc.gpkg' WHERE NAME = 'Jackson'"),
                    crop_to_cutline = TRUE, nodata = -99)
 
@@ -153,7 +153,7 @@ f_sf <- read_sf(f) |>
 
 terra::plotRGB(nc.mask)
 plot(st_geometry(f_sf), add=TRUE, border='grey90')
-terra::plotRGB(stokes.mask)
+terra::plotRGB(jackson.mask)
 plot(st_geometry(f_sf), add=TRUE, border='grey10')
 
 ```
@@ -200,11 +200,17 @@ be compatible with {rayshader...}
 library(rayshader)
 
 # get terrain as matrix
-nc_dtm.mat <- ezwarp(src, f_sf, cutline = f, crop_to_cutline = TRUE,
-                     res=200, out_class = 'matrix', nodata=-999, 
-                     resample = "lanczos") |> 
-  ray_shade(zscale=70)|> 
-  plot_map()
+nc_dtm.mat <- ezwarp(src, jackson.mask,
+                     res=50, out_class = 'matrix', nodata=-999, 
+                     resample = "lanczos") 
+nc_dtm.mat|> 
+  sphere_shade(texture = "imhof4") |> 
+  add_shadow(ray_shade(nc_dtm.mat, zscale=10, sunaltitude = 20,
+  sunangle = 200,), 0)|> 
+  plot_3d(nc_dtm.mat, zscale = 10,fov = 130, theta = 50, phi = 20, zoom=0.1, 
+          windowsize = c(1000, 800))
+Sys.sleep(0.2)
+render_depth(focallength = 300, clear = TRUE)
 
 ```
 
