add correct GEBCO and geoboundaries refs.

--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  cache=FALSE,
+  cache=TRUE,
   out.width = "100%",
   warning = FALSE,
   message = FALSE
@@ -84,10 +84,11 @@ remotes::install_github("Permian-Global-Research/ezwarp")
 
 ### Examples
 
-A very simple example, defining the grid manually with ezgrid. Here we use the
-excellent global GEBCO elevation dataset from ... Now clearly downloading at full
-resolution would take forever. So, using gdalwarp we can resample to a more 
-modest resolution - in this case 0.5 degrees - by manually setting the dimension.
+A very simple example, defining the grid manually with `ezgrid`. Here we use the
+excellent [GEBCO elevation](https://www.gebco.net/data_and_products/gridded_bathymetry_data/gebco_2021/ ) dataset via the [Australian Antarctic Data Centre](https://data.aad.gov.au/datasets/science/GEBCO_2021_GEOTIFF)'s 
+Cloud optimized Geotiff (COG). Now, clearly downloading at full resolution would 
+take forever. So, using gdalwarp we can resample to a more modest resolution - 
+in this case 0.5 degrees - by manually setting the dimension.
 
 Note that the output can be either a SpatRaster or stars object. Also, see that 
 a general plotting function `sciplot` is provided to make use of the great scientific
@@ -111,11 +112,11 @@ sciplot(world.el.stars, pal='oleron', n =256, centre=TRUE)
 ```
 
 The `cutline` argument can be used to mask regions with a input spatial vector. 
-Here we demonstrate this by using an online [geojson of Madagascar](https://www.geoboundaries.org/downloadCGAZ.html) 
-directly. Note also that we reuse the source as the target (y) but set the 
-`res` argument to 0.5 to make sure we resample the grid. We also specify 
+Here we demonstrate this by using an online geojson of Madagascar from the [geoboundaries database](https://www.geoboundaries.org/downloadCGAZ.html) 
+directly. Note also that we reuse the source as the target `y` but set the 
+`res` argument to 0.5 to make sure we rescale the grid. We also specify 
 `crop_to_cutline = TRUE` otherwise the extent will default to that defined by `y`. 
-In this example, the 'sf' warp engine is used rather than 'vapour'.
+In this example, the 'sf' warp `engine` is used rather than 'vapour'.
 
 ```{r mask-world}
 madagascar <-"https://github.com/wmgeolab/geoBoundariesArchive_4_0_0/raw/299e00623ece6c03bcb9a751eda6094b1eac85a6/releaseData/gbOpen/MDG/ADM0/geoBoundaries-MDG-ADM0.geojson"
