--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,8 @@ knitr::opts_chunk$set(
 
 # ezwarp 
 
+<img align="right" width="250" src="inst/figures/ezwarp-hex.png">
+
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![codecov](https://codecov.io/gh/Permian-Global-Research/ezwarp/branch/main/graph/badge.svg?token=4I9PAMOY5I)](https://codecov.io/gh/Permian-Global-Research/ezwarp)
